# grpc_app

./: CMakeLists.txt  README.md  START.bat
misc/: CMakeCache.txt  Makefile  cmake_install.cmake  download_data.R  install_pkgs.ps1  setup.sh
proto/: market.proto
rsrc/: AAPL.csv  AMZN.csv  GOOG.csv  HD.csv  JPM.csv  META.csv  MSFT.csv  NVDA.csv  TSLA.csv  UNH.csv
src/: client.cpp  main.cpp  server.cpp
tests/: test_basic.cpp
